CI build: Upgrading dependencies:
NuGet:CK.Testing.StObjEngine/23.0.1--0150-develop
NuGet:CK.StObj.TypeScript/0.13.1--0092-develop
NuGet:CK.Auth.Abstractions/4.0.1--0027-develop
NuGet:CK.Testing.StObjEngine/23.0.1--0150-develop
NuGet:CK.AspNet.Tester/4.0.3--0003-develop
NuGet:CK.AspNet.Auth/20.0.1--0083-develop
NuGet:CK.StObj.TypeScript.Engine/0.13.1--0092-develop
NuGet:CK.Globalization/0.0.0--04k7ugc-develop
NuGet:CK.Testing.StObjEngine/23.0.1--0150-develop
NuGet:CK.CodeGen/7.0.1--0048-develop
NuGet:CK.StObj.Runtime/23.0.1--0150-develop
NuGet:CK.PerfectEvent/19.0.1--0045-develop
NuGet:CK.Globalization/0.0.0--04k7ugc-develop
NuGet:CK.StObj.Model/23.0.1--0150-develop
NuGet:CK.Auth.Abstractions/4.0.1--0027-develop
NuGet:CK.Testing.StObjEngine/23.0.1--0150-develop.

--- a/CK.Cris.AspNet/CK.Cris.AspNet.csproj
+++ b/CK.Cris.AspNet/CK.Cris.AspNet.csproj
@@ -8,7 +8,7 @@
   </ItemGroup>
   <ItemGroup>
     <!-- Temporary: should be externalized in a CK.Cris.Globalization independent package. -->
-    <PackageReference Include="CK.Globalization" Version="0.0.0--04jibk7-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.0.0--04k7ugc-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris.BackgroundExecutor\CK.Cris.BackgroundExecutor.csproj" />
