--- a/.gitignore
+++ b/.gitignore
@@ -249,17 +249,22 @@ paket-files/
 # JetBrains Rider
 .idea/
 *.sln.iml
-CodeCakeBuilder/Tools/
 
 Tests/**/TestResult*.xml
 Tests/**/Logs/
 Tests/**/CKSetup-WorkingDir/
-CodeCakeBuilder/MemoryKey.*.txt
-CodeCakeBuilder/UnitTestsDone.*.txt
 $StObjGen/
 
-/Tests/CK.Cris.Tests/TypeScriptOutput/
-/Tests/CK.Cris.AspNet.Tests/TypeScriptOutput/
-
+CodeCakeBuilder/MemoryKey.*.txt
+CodeCakeBuilder/UnitTestsDone.*.txt
+CodeCakeBuilder/Tools/
 CodeCakeBuilder/[Rr]elease/
 CodeCakeBuilder/[Rr]eleases/
+
+/**/.yarn/*
+!/**/.yarn/cache
+!/**/.yarn/patches
+!/**/.yarn/plugins
+!/**/.yarn/sdks
+!/**/.yarn/releases
+!/**/.yarn/versions
