--- a/CK.Cris.AspNet.Engine/CK.Cris.AspNet.Engine.csproj
+++ b/CK.Cris.AspNet.Engine/CK.Cris.AspNet.Engine.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>CK.Setup.Cris</RootNamespace>
     <Nullable>enable</Nullable>
+    <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <!--
