CI build: Upgrading dependencies:
NuGet:CK.AspNet/11.0.1--0040-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.13.1--0106-develop
NuGet:CK.Testing.StObjEngine/23.0.1--0156-develop
NuGet:CK.StObj.TypeScript/0.13.1--0106-develop
NuGet:CK.Auth.Abstractions/4.0.1--0029-develop
NuGet:CK.AspNet.Tester/4.0.3--0004-develop
NuGet:CK.AspNet.Auth/20.0.1--0087-develop
NuGet:CK.StObj.TypeScript.Engine/0.13.1--0106-develop
NuGet:CK.Globalization/0.0.0--04khhi1-develop
NuGet:CK.Testing.StObjEngine/23.0.1--0156-develop
NuGet:CK.CodeGen/7.0.1--0052-develop
NuGet:CK.StObj.Runtime/23.0.1--0156-develop
NuGet:CK.PerfectEvent/19.0.1--0049-develop
NuGet:CK.Globalization/0.0.0--04khhi1-develop
NuGet:CK.StObj.Model/23.0.1--0156-develop
NuGet:CK.Auth.Abstractions/4.0.1--0029-develop
NuGet:CK.Testing.StObjEngine/23.0.1--0156-develop.

--- a/CK.Cris.AspNet/CK.Cris.AspNet.csproj
+++ b/CK.Cris.AspNet/CK.Cris.AspNet.csproj
@@ -8,7 +8,7 @@
   </ItemGroup>
   <ItemGroup>
     <!-- Temporary? should this be externalized in a CK.Cris.Globalization independent package? -->
-    <PackageReference Include="CK.Globalization" Version="0.0.0--04kdcti-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.0.0--04khhi1-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris.BackgroundExecutor\CK.Cris.BackgroundExecutor.csproj" />
