CI build: Upgrading dependencies:
NuGet:CK.Testing.AppIdentity/0.0.0--04kn2ug-develop
NuGet:CK.Poco.Json/23.0.1--0161-develop
NuGet:CK.AppIdentity/0.0.0--04kn2ug-develop
NuGet:CK.AspNet/11.0.1--0041-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.13.1--0109-develop
NuGet:CK.Testing.StObjEngine/23.0.1--0161-develop
NuGet:CK.StObj.TypeScript/0.13.1--0109-develop
NuGet:CK.Auth.Abstractions/4.0.1--0030-develop
NuGet:CK.AspNet.Tester/4.0.3--0004-develop
NuGet:CK.AspNet.Auth/20.0.1--0090-develop
NuGet:CK.StObj.TypeScript.Engine/0.13.1--0109-develop
NuGet:CK.Globalization/0.0.0--04kn2ug-develop
NuGet:CK.Testing.StObjEngine/23.0.1--0161-develop
NuGet:CK.CodeGen/7.0.1--0053-develop
NuGet:CK.StObj.Runtime/23.0.1--0161-develop
NuGet:CK.PerfectEvent/19.0.1--0050-develop
NuGet:CK.Globalization/0.0.0--04kn2ug-develop
NuGet:CK.StObj.Model/23.0.1--0161-develop
NuGet:CK.Auth.Abstractions/4.0.1--0030-develop
NuGet:CK.Testing.StObjEngine/23.0.1--0161-develop.

--- a/Tests/CK.Cris.HttpSender.Tests/CK.Cris.HttpSender.Tests.csproj
+++ b/Tests/CK.Cris.HttpSender.Tests/CK.Cris.HttpSender.Tests.csproj
@@ -1,14 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <Nullable>enable</Nullable>
     <LangVersion>11</LangVersion>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="CK.Testing.AppIdentity" Version="0.0.0--04kl2gf-develop" />
+    <PackageReference Include="CK.Testing.AppIdentity" Version="0.0.0--04kn2ug-develop" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" PrivateAssets="all" Version="4.5.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
@@ -19,5 +17,4 @@
     <ProjectReference Include="..\..\CK.Cris.HttpSender\CK.Cris.HttpSender.csproj" />
     <ProjectReference Include="..\..\CK.Testing.CrisAspNetEngine\CK.Testing.CrisAspNetEngine.csproj" />
   </ItemGroup>
-
 </Project>
