--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -1,19 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <IsPackable>true</IsPackable>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.0.0--04kmxee-develop" />
-    <PackageReference Include="CK.Poco.Json" Version="23.0.1--0157-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.0.0--04kn2ug-develop" />
+    <PackageReference Include="CK.Poco.Json" Version="23.0.1--0161-develop" />
     <PackageReference Include="Polly.Core" Version="8.0.0" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
   </ItemGroup>
-
 </Project>
