--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -5,7 +5,7 @@
     <IsPackable>true</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.0.0--04kn2ug-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.0.0--04kn6y5-develop" />
     <PackageReference Include="CK.Poco.Json" Version="23.0.1--0162-develop" />
     <PackageReference Include="Polly.Core" Version="8.0.0" />
   </ItemGroup>
