CI build: Upgrading dependencies:
NuGet:CK.Testing.AppIdentity/0.0.0--04kok4n-develop
NuGet:CK.Poco.Json/23.0.1--0163-develop
NuGet:CK.AppIdentity/0.0.0--04kok4n-develop
NuGet:CK.AspNet/11.0.1--0042-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.13.1--0111-develop
NuGet:CK.Testing.StObjEngine/23.0.1--0163-develop
NuGet:CK.StObj.TypeScript/0.13.1--0111-develop
NuGet:CK.Auth.Abstractions/4.0.1--0031-develop
NuGet:CK.AspNet.Tester/4.0.3--0004-develop
NuGet:CK.AspNet.Auth/20.0.1--0092-develop
NuGet:CK.StObj.TypeScript.Engine/0.13.1--0111-develop
NuGet:CK.Globalization/0.0.0--04kok4n-develop
NuGet:CK.Testing.StObjEngine/23.0.1--0163-develop
NuGet:CK.CodeGen/7.0.1--0054-develop
NuGet:CK.StObj.Runtime/23.0.1--0163-develop
NuGet:CK.PerfectEvent/19.0.1--0051-develop
NuGet:CK.Globalization/0.0.0--04kok4n-develop
NuGet:CK.StObj.Model/23.0.1--0163-develop
NuGet:CK.Auth.Abstractions/4.0.1--0031-develop
NuGet:CK.Testing.StObjEngine/23.0.1--0163-develop.

--- a/CK.Cris.AspNet/CK.Cris.AspNet.csproj
+++ b/CK.Cris.AspNet/CK.Cris.AspNet.csproj
@@ -8,7 +8,7 @@
   </ItemGroup>
   <ItemGroup>
     <!-- Temporary? should this be externalized in a CK.Cris.Globalization independent package? -->
-    <PackageReference Include="CK.Globalization" Version="0.0.0--04kn2ug-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.0.0--04kok4n-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris.BackgroundExecutor\CK.Cris.BackgroundExecutor.csproj" />
