--- a/CK.Testing.CrisAspNetEngine/CK.Testing.CrisAspNetEngine.csproj
+++ b/CK.Testing.CrisAspNetEngine/CK.Testing.CrisAspNetEngine.csproj
@@ -4,8 +4,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AspNet" Version="11.0.1--0042-develop" />
-    <PackageReference Include="CK.Testing.StObjTypeScriptEngine" Version="0.13.1--0111-develop" />
+    <PackageReference Include="CK.AspNet" Version="12.0.0" />
+    <PackageReference Include="CK.Testing.StObjTypeScriptEngine" Version="0.14.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris.AspNet.Engine\CK.Cris.AspNet.Engine.csproj" />
