--- a/Tests/CK.Cris.Executor.Tests/CK.Cris.Executor.Tests.csproj
+++ b/Tests/CK.Cris.Executor.Tests/CK.Cris.Executor.Tests.csproj
@@ -5,8 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Auth.Abstractions" Version="5.0.0" />
-    <PackageReference Include="CK.Testing.StObjEngine" Version="24.0.0" />
+    <PackageReference Include="CK.Auth.Abstractions" Version="5.0.1--0001-develop" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="24.0.1--0002-develop" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" PrivateAssets="all" Version="4.5.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
