Releasing 0.20.0. Upgrading release dependencies: NuGet:CK.Testing.AppIdentity/0.1.1, NuGet:CK.AppIdentity/0.1.1, NuGet:CK.Poco.Json/24.1.0, NuGet:CK.AspNet/12.0.1, NuGet:CK.Testing.StObjTypeScriptEngine/0.15.0, NuGet:CK.Testing.StObjEngine/24.1.0, NuGet:CK.StObj.TypeScript/0.15.0, NuGet:CK.Auth.Abstractions/5.0.0, NuGet:CK.AspNet.Tester/4.0.3, NuGet:CK.AspNet.Auth/21.1.0, NuGet:CK.StObj.TypeScript.Engine/0.15.0, NuGet:CK.Globalization/0.2.0, NuGet:CK.Testing.StObjEngine/24.1.0, NuGet:CK.CodeGen/8.0.1, NuGet:CK.StObj.Runtime/24.1.0, NuGet:CK.PerfectEvent/20.0.1, NuGet:CK.Globalization/0.2.0, NuGet:CK.StObj.Model/24.1.0, NuGet:CK.Auth.Abstractions/5.0.0, NuGet:CK.Testing.StObjEngine/24.1.0.

--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -5,8 +5,8 @@
     <IsPackable>true</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.1.1--0002-develop" />
-    <PackageReference Include="CK.Poco.Json" Version="24.0.1--0007-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.1.1" />
+    <PackageReference Include="CK.Poco.Json" Version="24.1.0" />
     <PackageReference Include="Polly.Core" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
