--- a/Tests/CK.Cris.Tests/CK.Cris.Tests.csproj
+++ b/Tests/CK.Cris.Tests/CK.Cris.Tests.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.StObjEngine" Version="24.0.1--0007-develop" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="24.1.0" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
