--- a/CK.Testing.CrisAspNetEngine/CK.Testing.CrisAspNetEngine.csproj
+++ b/CK.Testing.CrisAspNetEngine/CK.Testing.CrisAspNetEngine.csproj
@@ -4,8 +4,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AspNet" Version="12.0.2--0001-develop" />
-    <PackageReference Include="CK.Testing.StObjTypeScriptEngine" Version="0.15.1--0007-develop" />
+    <PackageReference Include="CK.AspNet" Version="12.0.1" />
+    <PackageReference Include="CK.Testing.StObjTypeScriptEngine" Version="0.15.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris.AspNet.Engine\CK.Cris.AspNet.Engine.csproj" />
