--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -5,8 +5,8 @@
     <IsPackable>true</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.1.2" />
-    <PackageReference Include="CK.Poco.Json" Version="24.1.0" />
+    <PackageReference Include="CK.AppIdentity" Version="0.1.3--0003-develop" />
+    <PackageReference Include="CK.Poco.Json" Version="24.1.1--0005-develop" />
     <PackageReference Include="Polly.Core" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
