Releasing 0.21.0. Upgrading release dependencies: NuGet:CK.Testing.AppIdentity/0.1.2, NuGet:CK.AppIdentity/0.1.2, NuGet:CK.Poco.Json/24.2.0, NuGet:CK.AspNet/12.0.1, NuGet:CK.Testing.StObjTypeScriptEngine/0.16.0, NuGet:CK.Testing.StObjEngine/24.2.0, NuGet:CK.StObj.TypeScript/0.16.0, NuGet:CK.Auth.Abstractions/5.0.0, NuGet:CK.AspNet.Tester/4.0.3, NuGet:CK.AspNet.Auth/21.2.0, NuGet:CK.StObj.TypeScript.Engine/0.16.0, NuGet:CK.Globalization/0.2.0, NuGet:CK.Testing.StObjEngine/24.2.0, NuGet:CK.CodeGen/8.0.1, NuGet:CK.StObj.Runtime/24.2.0, NuGet:CK.PerfectEvent/20.0.1, NuGet:CK.Globalization/0.2.0, NuGet:CK.StObj.Model/24.2.0, NuGet:CK.Auth.Abstractions/5.0.0, NuGet:CK.Testing.StObjEngine/24.2.0.

--- a/CK.Cris.TypeScript/CK.Cris.TypeScript.csproj
+++ b/CK.Cris.TypeScript/CK.Cris.TypeScript.csproj
@@ -21,7 +21,7 @@
         in AssemblyInfo.cs.
     -->
   <ItemGroup>
-    <PackageReference Include="CK.StObj.TypeScript" Version="0.15.2--0002-develop" />
+    <PackageReference Include="CK.StObj.TypeScript" Version="0.16.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
