--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -5,7 +5,7 @@
     <RootNamespace>CK.Cris</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.2.1--0003-develop" />
-    <PackageReference Include="CK.StObj.Model" Version="24.1.1--0006-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.2.0" />
+    <PackageReference Include="CK.StObj.Model" Version="24.2.0" />
   </ItemGroup>
 </Project>
