--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -5,7 +5,7 @@
     <RootNamespace>CK.Cris</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.2.1--0006-develop" />
-    <PackageReference Include="CK.StObj.Model" Version="24.2.2--0002-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.2.1" />
+    <PackageReference Include="CK.StObj.Model" Version="24.2.2" />
   </ItemGroup>
 </Project>
