HttpCrisSender now handles authentication.
CK.Auth.Cris now defines IBasicLoginCommand, IRefreshAuthenticationCommand
and ILogoutCommand commands. A IAuthenticationResult : IPoco and a
IPocoAuthenticationInfo are also defined.

The new package CK.AspNet.Auth.Cris implements a CrisWebFrontAuthCommandHandler
(endpoint singleton service) that handles the Login/Refresh/Logout on
the WebFrontAuthService.

There can be other ways to handle these commands (without http).

--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Polly.Core" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CK.Auth.Cris\CK.Auth.Cris.csproj" />
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
   </ItemGroup>
 </Project>
