--- a/CK.Testing.CrisAspNetEngine/CK.Testing.CrisAspNetEngine.csproj
+++ b/CK.Testing.CrisAspNetEngine/CK.Testing.CrisAspNetEngine.csproj
@@ -4,7 +4,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AspNet" Version="12.0.1" />
+    <PackageReference Include="CK.AspNet.Auth" Version="21.2.1" />
     <PackageReference Include="CK.Testing.StObjTypeScriptEngine" Version="0.16.1" />
   </ItemGroup>
   <ItemGroup>
