CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/21.3.1--0002-develop
NuGet:CK.Testing.AppIdentity/0.2.2--0001-develop
NuGet:CK.Poco.Json/24.2.3--0002-develop
NuGet:CK.AppIdentity/0.2.2--0001-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.16.2--0001-develop
NuGet:CK.AspNet.Auth/21.3.1--0002-develop
NuGet:CK.Testing.StObjEngine/24.2.3--0002-develop
NuGet:CK.StObj.TypeScript/0.16.2--0001-develop
NuGet:CK.Auth.Abstractions/5.0.1--0009-develop
NuGet:CK.AspNet.Tester/4.0.4--0000-develop
NuGet:CK.AspNet.Auth/21.3.1--0002-develop
NuGet:CK.StObj.TypeScript.Engine/0.16.2--0001-develop
NuGet:CK.Globalization/0.2.2--0002-develop
NuGet:CK.Testing.StObjEngine/24.2.3--0002-develop
NuGet:CK.CodeGen/8.0.2--0007-develop
NuGet:CK.StObj.Runtime/24.2.3--0002-develop
NuGet:CK.PerfectEvent/20.0.2--0007-develop
NuGet:CK.Globalization/0.2.2--0002-develop
NuGet:CK.StObj.Model/24.2.3--0002-develop
NuGet:CK.Auth.Abstractions/5.0.1--0009-develop
NuGet:CK.Testing.StObjEngine/24.2.3--0002-develop.

--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -5,8 +5,8 @@
     <IsPackable>true</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.2.1" />
-    <PackageReference Include="CK.Poco.Json" Version="24.2.2" />
+    <PackageReference Include="CK.AppIdentity" Version="0.2.2--0001-develop" />
+    <PackageReference Include="CK.Poco.Json" Version="24.2.3--0002-develop" />
     <PackageReference Include="Polly.Core" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
