--- a/CK.AspNet.Auth.Cris/CK.AspNet.Auth.Cris.csproj
+++ b/CK.AspNet.Auth.Cris/CK.AspNet.Auth.Cris.csproj
@@ -1,17 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <Description>Implements IBasicLoginCommand, IRefreshAuthenticationCommand and ILogoutCommand using the WebFrontAuthService.</Description>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="CK.AspNet.Auth" Version="21.3.0" />
+    <PackageReference Include="CK.AspNet.Auth" Version="21.3.1--0002-develop" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\CK.Auth.Cris\CK.Auth.Cris.csproj" />
   </ItemGroup>
-
 </Project>
