--- a/CK.Cris.Engine/CK.Cris.Engine.csproj
+++ b/CK.Cris.Engine/CK.Cris.Engine.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- Waiting for v8.0.0 -->
-    <PackageReference Include="CK.CodeGen" Version="8.0.1" />
-    <PackageReference Include="CK.StObj.Runtime" Version="24.2.2" />
+    <PackageReference Include="CK.CodeGen" Version="8.0.2--0007-develop" />
+    <PackageReference Include="CK.StObj.Runtime" Version="24.2.3--0002-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
