--- a/CK.Testing.CrisAspNetEngine/CK.Testing.CrisAspNetEngine.csproj
+++ b/CK.Testing.CrisAspNetEngine/CK.Testing.CrisAspNetEngine.csproj
@@ -4,8 +4,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AspNet.Auth" Version="21.2.1" />
-    <PackageReference Include="CK.Testing.StObjTypeScriptEngine" Version="0.16.1" />
+    <PackageReference Include="CK.AspNet.Auth" Version="21.3.1--0002-develop" />
+    <PackageReference Include="CK.Testing.StObjTypeScriptEngine" Version="0.16.2--0001-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris.AspNet.Engine\CK.Cris.AspNet.Engine.csproj" />
