CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/21.4.1--0001-develop
NuGet:CK.Testing.AppIdentity/0.3.1--0001-develop
NuGet:CK.AppIdentity/0.3.1--0001-develop
NuGet:CK.Poco.Json/24.3.1--0001-develop
NuGet:CK.AspNet.Auth/21.4.1--0001-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.17.1--0001-develop
NuGet:CK.Testing.StObjEngine/24.3.1--0001-develop
NuGet:CK.StObj.TypeScript/0.17.1--0001-develop
NuGet:CK.Auth.Abstractions/5.0.1--0011-develop
NuGet:CK.AspNet.Tester/4.0.4--0000-develop
NuGet:CK.AspNet.Auth/21.4.1--0001-develop
NuGet:CK.StObj.TypeScript.Engine/0.17.1--0001-develop
NuGet:CK.Globalization/0.3.1--0001-develop
NuGet:CK.Testing.StObjEngine/24.3.1--0001-develop
NuGet:CK.CodeGen/8.0.2--0009-develop
NuGet:CK.StObj.Runtime/24.3.1--0001-develop
NuGet:CK.PerfectEvent/20.0.2--0009-develop
NuGet:CK.Globalization/0.3.1--0001-develop
NuGet:CK.StObj.Model/24.3.1--0001-develop
NuGet:CK.Auth.Abstractions/5.0.1--0011-develop
NuGet:CK.Testing.StObjEngine/24.3.1--0001-develop.

--- a/CK.Cris.Engine/CK.Cris.Engine.csproj
+++ b/CK.Cris.Engine/CK.Cris.Engine.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- Waiting for v8.0.0 -->
-    <PackageReference Include="CK.CodeGen" Version="8.0.1" />
-    <PackageReference Include="CK.StObj.Runtime" Version="24.3.0" />
+    <PackageReference Include="CK.CodeGen" Version="8.0.2--0009-develop" />
+    <PackageReference Include="CK.StObj.Runtime" Version="24.3.1--0001-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
