--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -5,7 +5,7 @@
     <RootNamespace>CK.Cris</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.3.0" />
-    <PackageReference Include="CK.StObj.Model" Version="24.3.0" />
+    <PackageReference Include="CK.Globalization" Version="0.3.1--0001-develop" />
+    <PackageReference Include="CK.StObj.Model" Version="24.3.1--0001-develop" />
   </ItemGroup>
 </Project>
