--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -4,8 +4,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.3.1--0016-develop" />
-    <PackageReference Include="CK.Poco.Json" Version="24.3.1--0004-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.4.0" />
+    <PackageReference Include="CK.Poco.Json" Version="25.0.0" />
     <PackageReference Include="Polly.Core" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
