CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/22.0.1--0002-develop
NuGet:CK.Testing.AppIdentity/0.4.1--0003-develop
NuGet:CK.AppIdentity/0.4.1--0003-develop
NuGet:CK.AspNet.Auth/22.0.1--0002-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.18.1--0017-develop
NuGet:CK.Testing.StObjEngine/25.0.1--0057-develop
NuGet:CK.StObj.TypeScript/0.18.1--0017-develop
NuGet:CK.Auth.Abstractions/6.0.1--0002-develop
NuGet:CK.AspNet.Tester/4.0.4--0002-develop
NuGet:CK.AspNet.Auth/22.0.1--0002-develop
NuGet:CK.StObj.TypeScript.Engine/0.18.1--0017-develop
NuGet:CK.Globalization/0.5.1--0003-develop
NuGet:CK.Testing.StObjEngine/25.0.1--0057-develop
NuGet:CK.CodeGen/9.0.1--0002-develop
NuGet:CK.StObj.Runtime/25.0.1--0057-develop
NuGet:CK.PerfectEvent/21.0.1--0003-develop
NuGet:CK.Globalization/0.5.1--0003-develop
NuGet:CK.StObj.Model/25.0.1--0057-develop
NuGet:CK.Auth.Abstractions/6.0.1--0002-develop
NuGet:CK.Testing.StObjEngine/25.0.1--0057-develop.

--- a/CK.Auth.Cris/CK.Auth.Cris.csproj
+++ b/CK.Auth.Cris/CK.Auth.Cris.csproj
@@ -6,6 +6,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
-    <PackageReference Include="CK.Auth.Abstractions" Version="6.0.0" />
+    <PackageReference Include="CK.Auth.Abstractions" Version="6.0.1--0002-develop" />
   </ItemGroup>
 </Project>
