--- a/CK.AspNet.Auth.Cris/CK.AspNet.Auth.Cris.csproj
+++ b/CK.AspNet.Auth.Cris/CK.AspNet.Auth.Cris.csproj
@@ -5,7 +5,7 @@
     <Description>Implements IBasicLoginCommand, IRefreshAuthenticationCommand and ILogoutCommand using the WebFrontAuthService.</Description>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AspNet.Auth" Version="22.0.0" />
+    <PackageReference Include="CK.AspNet.Auth" Version="22.0.1--0002-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Auth.Cris\CK.Auth.Cris.csproj" />
