--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -5,7 +5,7 @@
     <RootNamespace>CK.Cris</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.5.1--0005-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.6.0" />
     <PackageReference Include="CK.StObj.Model" Version="25.0.1--0061-develop" />
   </ItemGroup>
 </Project>
