--- a/CK.Cris.TypeScript/CK.Cris.TypeScript.csproj
+++ b/CK.Cris.TypeScript/CK.Cris.TypeScript.csproj
@@ -9,19 +9,19 @@
     </description>
   </PropertyGroup>
   <!--
-         The CK.StObj.TypeScript package contains 2 only types: the TypeScriptAttribute (with Folder, FileName,
+         The CK.StObj.TypeScript package contains few types: the TypeScriptAttribute (with Folder, FileName,
          TypeName, SameFolderAs and SameFileAs properties) and the TypeScriptAspectConfiguration
-         object, but it depends on another micro-package: the CK.Poco.Json that generates Json serialization.
+         objects, but it depends on another micro-package: the CK.Poco.Json that generates Json serialization.
 
          The CK.StObj.TypeScript.Engine is the one that does the job (it triggers TypeScript generation only when the TypeScriptAspect is
-         declared and one or more <TypeScript><OutuptPath>...</OutuptPath></TypeScript> is defined in the BinPathConfiguration).
+         declared and a <TypeScript><OutuptPath>...</OutuptPath></TypeScript> is defined in the BinPathConfiguration).
 
         For components registration, we must ensure that this CK.Cris.TypeScript.dll keeps a reference to the CK.StObj.TypeScript.dll.
         This is the goal of the [assembly: CK.Core.PreserveAssemblyReference( typeof( CK.StObj.TypeScript.TypeScriptAttribute ) )]
         in AssemblyInfo.cs.
     -->
   <ItemGroup>
-    <PackageReference Include="CK.StObj.TypeScript" Version="0.18.1--0024-develop" />
+    <PackageReference Include="CK.StObj.TypeScript" Version="0.18.1--0046-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
