--- a/CK.Cris.AspNet.IO/CK.Cris.AspNet.IO.csproj
+++ b/CK.Cris.AspNet.IO/CK.Cris.AspNet.IO.csproj
@@ -1,10 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
+
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.6.0" />
-    <PackageReference Include="CK.StObj.Model" Version="25.0.1--0108-develop" />
+    <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
   </ItemGroup>
+
 </Project>
