--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,6 +8,6 @@ install:
 - ps: Install-Product node 20 x64
 test: false
 on_finish:
-- ps: "'Get-ChildItem -Recurse *.log -exclude LastRun.log | % { Push-AppveyorArtifact $_.FullName }'"
+- ps: Get-ChildItem -Recurse *.log -exclude LastRun.log | % { Push-AppveyorArtifact $_.FullName }
 build_script:
 - dotnet run --project CodeCakeBuilder -nointeraction
