--- a/CK.Cris.AspNet.Auth.Basic/CK.Cris.AspNet.Auth.Basic.csproj
+++ b/CK.Cris.AspNet.Auth.Basic/CK.Cris.AspNet.Auth.Basic.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="CK.AspNet.Auth" Version="22.0.1--0018-develop" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CK.Auth.Cris\CK.Auth.Cris.csproj" />
+    <ProjectReference Include="..\CK.Cris.Auth\CK.Cris.Auth.csproj" />
+    <ProjectReference Include="..\CK.IO.Auth.Basic\CK.IO.Auth.Basic.csproj" />
   </ItemGroup>
 </Project>
