--- a/CK.Cris.TypeScript/CK.Cris.TypeScript.csproj
+++ b/CK.Cris.TypeScript/CK.Cris.TypeScript.csproj
@@ -14,7 +14,7 @@
          objects, but it depends on another micro-package: the CK.Poco.Exc.Json that generates Json serialization.
 
          The CK.StObj.TypeScript.Engine is the one that does the job (it triggers TypeScript generation only when the TypeScriptAspect is
-         declared and a <TypeScript><OutuptPath>...</OutuptPath></TypeScript> is defined in the BinPathConfiguration).
+         declared and a <TypeScript TargetOutuptPath="">...</TypeScript> is defined in the BinPathConfiguration).
 
         For components registration, we must ensure that this CK.Cris.TypeScript.dll keeps a reference to the CK.StObj.TypeScript.dll.
         This is the goal of the [assembly: CK.Core.PreserveAssemblyReference( typeof( CK.StObj.TypeScript.TypeScriptAttribute ) )]
