Releasing 0.32.0. Upgrading release dependencies: NuGet:CK.AspNet.Auth/23.0.0, NuGet:CK.Auth.Abstractions/7.0.0, NuGet:CK.Auth.Abstractions/7.0.0, NuGet:CK.Testing.AppIdentity/0.5.0, NuGet:CK.Testing.AspNetServer.Auth/0.19.0, NuGet:CK.AppIdentity/0.5.0, NuGet:CK.Poco.Exc.Json/26.0.0, NuGet:CK.Testing.StObjTypeScriptEngine/0.19.0, NuGet:CK.Testing.AspNetServer.Auth/0.19.0, NuGet:CK.Testing.StObjEngine/26.0.0, NuGet:CK.StObj.TypeScript/0.19.0, NuGet:CK.AspNet.Tester/4.0.4, NuGet:CK.AspNet.Auth/23.0.0, NuGet:CK.StObj.TypeScript.Engine/0.19.0, NuGet:CK.Testing.StObjEngine/26.0.0, NuGet:CK.CodeGen/10.0.0, NuGet:CK.StObj.Runtime/26.0.0, NuGet:CK.PerfectEvent/22.0.0, NuGet:CK.Globalization/0.7.0, NuGet:CK.StObj.Model/26.0.0, NuGet:CK.Auth.Abstractions/7.0.0, NuGet:CK.Testing.StObjEngine/26.0.0.

--- a/CK.Cris.Auth/CK.Cris.Auth.csproj
+++ b/CK.Cris.Auth/CK.Cris.Auth.csproj
@@ -4,7 +4,7 @@
     <RootNamespace>CK.Auth</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Auth.Abstractions" Version="6.0.1--0014-develop" />
+    <PackageReference Include="CK.Auth.Abstractions" Version="7.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.IO.Auth\CK.IO.Auth.csproj" />
