--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -4,8 +4,8 @@
     <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.4.1--0025-develop" />
-    <PackageReference Include="CK.Poco.Exc.Json" Version="25.0.1--0223-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.5.0" />
+    <PackageReference Include="CK.Poco.Exc.Json" Version="26.0.0" />
     <PackageReference Include="Polly.Core" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
