CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/23.0.1--0002-develop
NuGet:CK.Auth.Abstractions/7.0.1--0002-develop
NuGet:CK.Auth.Abstractions/7.0.1--0002-develop
NuGet:CK.Testing.AppIdentity/0.5.1--0002-develop
NuGet:CK.Testing.AspNetServer.Auth/0.19.1--0004-develop
NuGet:CK.AppIdentity/0.5.1--0002-develop
NuGet:CK.Poco.Exc.Json/26.0.1--0003-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.19.1--0004-develop
NuGet:CK.Testing.AspNetServer.Auth/0.19.1--0004-develop
NuGet:CK.Testing.StObjEngine/26.0.1--0003-develop
NuGet:CK.StObj.TypeScript/0.19.1--0004-develop
NuGet:CK.AspNet.Tester/4.0.5--0001-develop
NuGet:CK.AspNet.Auth/23.0.1--0002-develop
NuGet:CK.StObj.TypeScript.Engine/0.19.1--0004-develop
NuGet:CK.Testing.StObjEngine/26.0.1--0003-develop
NuGet:CK.CodeGen/10.0.1--0002-develop
NuGet:CK.StObj.Runtime/26.0.1--0003-develop
NuGet:CK.PerfectEvent/22.0.1--0002-develop
NuGet:CK.Globalization/0.7.1--0002-develop
NuGet:CK.StObj.Model/26.0.1--0003-develop
NuGet:CK.Auth.Abstractions/7.0.1--0002-develop
NuGet:CK.Testing.StObjEngine/26.0.1--0003-develop.

--- a/CK.Cris.AspNet.Auth.Basic/CK.Cris.AspNet.Auth.Basic.csproj
+++ b/CK.Cris.AspNet.Auth.Basic/CK.Cris.AspNet.Auth.Basic.csproj
@@ -4,7 +4,7 @@
     <Description>Implements IBasicLoginCommand, IRefreshAuthenticationCommand and ILogoutCommand using the WebFrontAuthService.</Description>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AspNet.Auth" Version="23.0.0" />
+    <PackageReference Include="CK.AspNet.Auth" Version="23.0.1--0002-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris.Auth\CK.Cris.Auth.csproj" />
