--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.7.0" />
-    <PackageReference Include="CK.StObj.Model" Version="26.0.0" />
+    <PackageReference Include="CK.Globalization" Version="0.7.1--0002-develop" />
+    <PackageReference Include="CK.StObj.Model" Version="26.0.1--0003-develop" />
   </ItemGroup>
 </Project>
