--- a/Tests/CK.Cris.Executor.Tests/CK.Cris.Executor.Tests.csproj
+++ b/Tests/CK.Cris.Executor.Tests/CK.Cris.Executor.Tests.csproj
@@ -4,8 +4,8 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Auth.Abstractions" Version="7.0.0" />
-    <PackageReference Include="CK.Testing.StObjEngine" Version="26.0.0" />
+    <PackageReference Include="CK.Auth.Abstractions" Version="7.0.1--0002-develop" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="26.0.1--0003-develop" />
     <PackageReference Include="NUnit" Version="4.1.0" />
     <PackageReference Include="NUnit3TestAdapter" PrivateAssets="all" Version="4.5.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
