Releasing 0.32.1. Upgrading release dependencies: NuGet:CK.AspNet.Auth/23.0.1, NuGet:CK.Auth.Abstractions/7.0.0, NuGet:CK.Auth.Abstractions/7.0.0, NuGet:CK.Testing.AppIdentity/0.5.0, NuGet:CK.Testing.AspNetServer.Auth/0.19.1, NuGet:CK.AppIdentity/0.5.0, NuGet:CK.Poco.Exc.Json/26.0.1, NuGet:CK.Testing.StObjTypeScriptEngine/0.19.1, NuGet:CK.Testing.AspNetServer.Auth/0.19.1, NuGet:CK.Testing.StObjEngine/26.0.1, NuGet:CK.StObj.TypeScript/0.19.1, NuGet:CK.AspNet.Tester/4.0.4, NuGet:CK.AspNet.Auth/23.0.1, NuGet:CK.StObj.TypeScript.Engine/0.19.1, NuGet:CK.Testing.StObjEngine/26.0.1, NuGet:CK.CodeGen/10.0.0, NuGet:CK.StObj.Runtime/26.0.1, NuGet:CK.PerfectEvent/22.0.0, NuGet:CK.Globalization/0.7.0, NuGet:CK.StObj.Model/26.0.1, NuGet:CK.Auth.Abstractions/7.0.0, NuGet:CK.Testing.StObjEngine/26.0.1.

--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -4,8 +4,8 @@
     <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.5.1--0002-develop" />
-    <PackageReference Include="CK.Poco.Exc.Json" Version="26.0.1--0004-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.5.0" />
+    <PackageReference Include="CK.Poco.Exc.Json" Version="26.0.1" />
     <PackageReference Include="Polly.Core" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
