CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/0.0.0--04ytpj7-develop
NuGet:CK.Auth.Abstractions/0.0.0--04ytpis-develop
NuGet:CK.Auth.Abstractions/0.0.0--04ytpis-develop
NuGet:CK.Testing.AppIdentity/0.0.0--04ytpix-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04ytpj9-develop
NuGet:CK.AppIdentity/0.0.0--04ytpix-develop
NuGet:CK.Poco.Exc.Json/0.0.0--04ytpiy-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.0.0--04ytpj9-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04ytpj9-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04ytpiy-develop
NuGet:CK.StObj.TypeScript/0.0.0--04ytpj9-develop
NuGet:CK.AspNet.Auth/0.0.0--04ytpj7-develop
NuGet:CK.StObj.TypeScript.Engine/0.0.0--04ytpj9-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04ytpiy-develop
NuGet:CK.CodeGen/0.0.0--04ytpiv-develop
NuGet:CK.StObj.Runtime/0.0.0--04ytpiy-develop
NuGet:CK.PerfectEvent/0.0.0--04ytpiv-develop
NuGet:CK.Globalization/0.0.0--04ytpix-develop
NuGet:CK.StObj.Model/0.0.0--04ytpiy-develop
NuGet:CK.Auth.Abstractions/0.0.0--04ytpis-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04ytpiy-develop.

--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.7.0" />
-    <PackageReference Include="CK.StObj.Model" Version="26.0.0" />
+    <PackageReference Include="CK.Globalization" Version="0.0.0--04ytpix-develop" />
+    <PackageReference Include="CK.StObj.Model" Version="0.0.0--04ytpiy-develop" />
   </ItemGroup>
 </Project>
