--- a/CK.Cris.Engine/CK.Cris.Engine.csproj
+++ b/CK.Cris.Engine/CK.Cris.Engine.csproj
@@ -5,8 +5,8 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.CodeGen" Version="10.0.0" />
-    <PackageReference Include="CK.StObj.Runtime" Version="26.0.0" />
+    <PackageReference Include="CK.CodeGen" Version="0.0.0--04ytpiv-develop" />
+    <PackageReference Include="CK.StObj.Runtime" Version="0.0.0--04ytpiy-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
