--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -4,8 +4,8 @@
     <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.5.0" />
-    <PackageReference Include="CK.Poco.Exc.Json" Version="26.0.0" />
+    <PackageReference Include="CK.AppIdentity" Version="0.0.0--04ytpix-develop" />
+    <PackageReference Include="CK.Poco.Exc.Json" Version="0.0.0--04ytpiy-develop" />
     <PackageReference Include="Polly.Core" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
