CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/0.0.0--04ytpq6-develop
NuGet:CK.Auth.Abstractions/0.0.0--04ytpps-develop
NuGet:CK.Auth.Abstractions/0.0.0--04ytpps-develop
NuGet:CK.Testing.AppIdentity/0.0.0--04ytpix-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04ytpq7-develop
NuGet:CK.AppIdentity/0.0.0--04ytpix-develop
NuGet:CK.Poco.Exc.Json/0.0.0--04ytpiy-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.0.0--04ytpq7-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04ytpq7-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04ytpiy-develop
NuGet:CK.StObj.TypeScript/0.0.0--04ytpq7-develop
NuGet:CK.AspNet.Auth/0.0.0--04ytpq6-develop
NuGet:CK.StObj.TypeScript.Engine/0.0.0--04ytpq7-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04ytpiy-develop
NuGet:CK.CodeGen/0.0.0--04ytpiv-develop
NuGet:CK.StObj.Runtime/0.0.0--04ytpiy-develop
NuGet:CK.PerfectEvent/0.0.0--04ytpiv-develop
NuGet:CK.Globalization/0.0.0--04ytpix-develop
NuGet:CK.StObj.Model/0.0.0--04ytpiy-develop
NuGet:CK.Auth.Abstractions/0.0.0--04ytpps-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04ytpiy-develop.

--- a/Tests/CK.Cris.HttpSender.Tests/CK.Cris.HttpSender.Tests.csproj
+++ b/Tests/CK.Cris.HttpSender.Tests/CK.Cris.HttpSender.Tests.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CK.Testing.AppIdentity" Version="0.0.0--04ytpix-develop" />
-    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--04ytpj9-develop" />
+    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--04ytpq7-develop" />
     <ProjectReference Include="..\..\CK.Testing.CrisAspNetEngine\CK.Testing.CrisAspNetEngine.csproj" />
   </ItemGroup>
   <ItemGroup>
