CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/0.0.0--04ytqpw-develop
NuGet:CK.Auth.Abstractions/0.0.0--04ytqpj-develop
NuGet:CK.Auth.Abstractions/0.0.0--04ytqpj-develop
NuGet:CK.Testing.AppIdentity/0.0.0--04ytqpn-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04ytqpy-develop
NuGet:CK.AppIdentity/0.0.0--04ytqpn-develop
NuGet:CK.Poco.Exc.Json/0.0.0--04ytqpo-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.0.0--04ytqpy-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04ytqpy-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04ytqpo-develop
NuGet:CK.StObj.TypeScript/0.0.0--04ytqpy-develop
NuGet:CK.AspNet.Auth/0.0.0--04ytqpw-develop
NuGet:CK.StObj.TypeScript.Engine/0.0.0--04ytqpy-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04ytqpo-develop
NuGet:CK.CodeGen/0.0.0--04ytqpl-develop
NuGet:CK.StObj.Runtime/0.0.0--04ytqpo-develop
NuGet:CK.PerfectEvent/0.0.0--04ytqpl-develop
NuGet:CK.Globalization/0.0.0--04ytqpo-develop
NuGet:CK.StObj.Model/0.0.0--04ytqpo-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04ytqpo-develop
NuGet:CK.Auth.Abstractions/0.0.0--04ytqpj-develop.

--- a/CK.Cris.Auth/CK.Cris.Auth.csproj
+++ b/CK.Cris.Auth/CK.Cris.Auth.csproj
@@ -4,7 +4,7 @@
     <RootNamespace>CK.Auth</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Auth.Abstractions" Version="0.0.0--04ytpps-develop" />
+    <PackageReference Include="CK.Auth.Abstractions" Version="0.0.0--04ytqpj-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.IO.Auth\CK.IO.Auth.csproj" />
