--- a/CK.IO.Auth/CK.IO.Auth.csproj
+++ b/CK.IO.Auth/CK.IO.Auth.csproj
@@ -5,6 +5,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
-    <PackageReference Include="CK.Auth.Abstractions" Version="0.0.0--04ytpps-develop" />
+    <PackageReference Include="CK.Auth.Abstractions" Version="0.0.0--04ytqpj-develop" />
   </ItemGroup>
 </Project>
